syntax = "proto3";

// 建议把测试接口放在单独的命名空间
option csharp_namespace = "Grpc.Shared.Contracts.Test";

package Test.v1;

service DeviceControl {
  rpc GetStatus (StatusRequest) returns (StatusResponse);

  rpc MonitorTemperature (MonitorRequest) returns (stream TemperatureData);

  rpc UploadLogs (stream LogEntry) returns (UploadResult);

  rpc LiveConsole (stream ConsoleCommand) returns (stream ConsoleOutput);
}

// --- 消息定义 ---

message StatusRequest {
  int32 device_id = 1;
}

message StatusResponse {
  string status = 1;
  int32 uptime_seconds = 2;
}

message MonitorRequest {
  int32 device_id = 1;
  int32 interval_seconds = 2; // 推送间隔
}

message TemperatureData {
  string timestamp = 1;
  double value = 2;
}

message LogEntry {
  string level = 1; // INFO, ERROR
  string content = 2;
}

message UploadResult {
  int32 count = 1;
  bool success = 2;
  string message = 3;
}

message ConsoleCommand {
  string command_text = 1;
}

message ConsoleOutput {
  string result_text = 1;
}